# nonebot-plugin-learning-chat

./: pyproject.toml  requirements.txt  setup.py
nonebot_plugin_learning_chat/: __init__.py  cache.py  config.py  handler.py  models.py  query.py  web_api.py  web_page.py
