[tool.poetry]
name = "nonebot_plugin_learning_chat"
version = "0.4.1"
description = "Nonebot2 plugin to learn what your group members say."
authors = ["CMHopeSunshine <277073121@qq.com>"]
keywords = ["nonebot2"]
homepage = "https://github.com/CMHopeSunshine/nonebot-plugin-learning-chat"
readme = "README.md"
license = "AGPL"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
nonebot2 = { version = "^2.0.0", extras = ["fastapi"] }
nonebot-adapter-onebot = "^2.1"
nonebot-plugin-apscheduler = "^0.5.0"
tortoise-orm = ">=0.20.0"
jieba = "^0.42.1"
"ruamel.yaml" = "^0.17.21"
amis-python = { git = "https://github.com/trytodupe/amis-python.git", rev = "b4e82bfa6c17fcf207542b1684a617a31a473092"}
python-jose = "^3.3.0"
nonebot-plugin-tortoise-orm = ">=0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
